--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body {
     background: url("bel.jpg") right top /
     83% no-repeat , url("belalbu.png")left top/ 17% no-repeat fixed;
     background-color: #838383;
-    font-family: Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family: Roboto, Oxygen, sans-serif;
     font-size: 150%;
     color: rgb(46, 45, 45);
 }
